--- a/nuget.config
+++ b/nuget.config
@@ -1,11 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <solution>
-    <add key="disableSourceControlIntegration" value="true" />
-  </solution>
   <packageSources>
-    <add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
-    <add key="Dayforce" value="http://tdc1tfsapp01.dayforce.com:8080/tfs/DefaultCollection/_packaging/dayforce/nuget/v3/index.json" />
-    <add key="Dayforce@Release" value="http://tdc1tfsapp01.dayforce.com:8080/tfs/DefaultCollection/_packaging/dayforce@release/nuget/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
 </configuration>
